--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "74f1ef23-d36d-478f-aab9-d386d2fde0ba",
    "metadata": {},
    "outputs": [
@@ -10,97 +10,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Collecting yahoo_fin\n",
       "  Using cached yahoo_fin-0.8.9.1-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: requests in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from yahoo_fin) (2.27.1)\n",
       "Collecting requests-html\n",
       "  Using cached requests_html-0.10.0-py3-none-any.whl (13 kB)\n",
+      "Requirement already satisfied: pandas in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from yahoo_fin) (1.4.2)\n",
       "Collecting feedparser\n",
       "  Using cached feedparser-6.0.10-py3-none-any.whl (81 kB)\n",
-      "Collecting requests\n",
-      "  Using cached requests-2.28.1-py3-none-any.whl (62 kB)\n",
-      "Requirement already satisfied: pandas in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from yahoo_fin) (1.4.3)\n",
       "Collecting sgmllib3k\n",
-      "  Using cached sgmllib3k-1.0.0-py3-none-any.whl\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas->yahoo_fin) (2022.2.1)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas->yahoo_fin) (1.23.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas->yahoo_fin) (2.8.2)\n",
-      "Collecting charset-normalizer<3,>=2\n",
-      "  Using cached charset_normalizer-2.1.0-py3-none-any.whl (39 kB)\n",
-      "Collecting idna<4,>=2.5\n",
-      "  Using cached idna-3.3-py3-none-any.whl (61 kB)\n",
-      "Collecting certifi>=2017.4.17\n",
-      "  Using cached certifi-2022.6.15-py3-none-any.whl (160 kB)\n",
-      "Collecting urllib3<1.27,>=1.21.1\n",
-      "  Using cached urllib3-1.26.11-py2.py3-none-any.whl (139 kB)\n",
-      "Collecting fake-useragent\n",
-      "  Using cached fake_useragent-0.1.11-py3-none-any.whl\n",
-      "Collecting w3lib\n",
-      "  Using cached w3lib-2.0.1-py3-none-any.whl (20 kB)\n",
-      "Collecting pyquery\n",
-      "  Using cached pyquery-1.4.3-py3-none-any.whl (22 kB)\n",
+      "  Using cached sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (2021.3)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pandas->yahoo_fin) (1.21.5)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->yahoo_fin) (1.16.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (1.26.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests->yahoo_fin) (2.0.4)\n",
       "Collecting parse\n",
-      "  Using cached parse-1.19.0-py3-none-any.whl\n",
+      "  Using cached parse-1.19.0.tar.gz (30 kB)\n",
+      "Requirement already satisfied: w3lib in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from requests-html->yahoo_fin) (1.21.0)\n",
       "Collecting pyppeteer>=0.0.14\n",
       "  Using cached pyppeteer-1.0.2-py3-none-any.whl (83 kB)\n",
       "Collecting bs4\n",
-      "  Using cached bs4-0.0.1-py3-none-any.whl\n",
-      "Collecting tqdm<5.0.0,>=4.42.1\n",
-      "  Using cached tqdm-4.64.0-py2.py3-none-any.whl (78 kB)\n",
-      "Collecting pyee<9.0.0,>=8.1.0\n",
-      "  Using cached pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
-      "Collecting importlib-metadata>=1.4\n",
-      "  Using cached importlib_metadata-4.12.0-py3-none-any.whl (21 kB)\n",
-      "Collecting appdirs<2.0.0,>=1.4.3\n",
-      "  Using cached appdirs-1.4.4-py2.py3-none-any.whl (9.6 kB)\n",
+      "  Using cached bs4-0.0.1.tar.gz (1.1 kB)\n",
+      "Collecting pyquery\n",
+      "  Using cached pyquery-1.4.3-py3-none-any.whl (22 kB)\n",
+      "Collecting fake-useragent\n",
+      "  Using cached fake-useragent-0.1.11.tar.gz (13 kB)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.42.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.64.0)\n",
+      "Requirement already satisfied: appdirs<2.0.0,>=1.4.3 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (1.4.4)\n",
       "Collecting websockets<11.0,>=10.0\n",
-      "  Downloading websockets-10.3-cp38-cp38-macosx_10_9_x86_64.whl (97 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m97.2/97.2 kB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->yahoo_fin) (1.15.0)\n",
-      "Collecting beautifulsoup4\n",
-      "  Using cached beautifulsoup4-4.11.1-py3-none-any.whl (128 kB)\n",
-      "Collecting cssselect>0.7.9\n",
-      "  Using cached cssselect-1.1.0-py2.py3-none-any.whl (16 kB)\n",
-      "Collecting lxml>=2.1\n",
-      "  Downloading lxml-4.9.1-cp38-cp38-macosx_10_15_x86_64.whl (4.6 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.6/4.6 MB\u001b[0m \u001b[31m27.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting zipp>=0.5\n",
-      "  Using cached zipp-3.8.1-py3-none-any.whl (5.6 kB)\n",
-      "Collecting soupsieve>1.2\n",
-      "  Using cached soupsieve-2.3.2.post1-py3-none-any.whl (37 kB)\n",
-      "Installing collected packages: sgmllib3k, pyee, parse, fake-useragent, appdirs, zipp, websockets, w3lib, urllib3, tqdm, soupsieve, lxml, idna, feedparser, cssselect, charset-normalizer, certifi, requests, pyquery, importlib-metadata, beautifulsoup4, pyppeteer, bs4, requests-html, yahoo_fin\n",
-      "\u001b[33m  WARNING: The script tqdm is installed in '/Users/etlers/Library/Python/3.8/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33m  WARNING: The script normalizer is installed in '/Users/etlers/Library/Python/3.8/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33m  WARNING: The script pyppeteer-install is installed in '/Users/etlers/Library/Python/3.8/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-      "\u001b[0mSuccessfully installed appdirs-1.4.4 beautifulsoup4-4.11.1 bs4-0.0.1 certifi-2022.6.15 charset-normalizer-2.1.0 cssselect-1.1.0 fake-useragent-0.1.11 feedparser-6.0.10 idna-3.3 importlib-metadata-4.12.0 lxml-4.9.1 parse-1.19.0 pyee-8.2.2 pyppeteer-1.0.2 pyquery-1.4.3 requests-2.28.1 requests-html-0.10.0 sgmllib3k-1.0.0 soupsieve-2.3.2.post1 tqdm-4.64.0 urllib3-1.26.11 w3lib-2.0.1 websockets-10.3 yahoo_fin-0.8.9.1 zipp-3.8.1\n"
+      "  Downloading websockets-10.3-cp39-cp39-macosx_10_9_x86_64.whl (97 kB)\n",
+      "\u001b[K     |████████████████████████████████| 97 kB 5.7 MB/s  eta 0:00:01\n",
+      "\u001b[?25hCollecting pyee<9.0.0,>=8.1.0\n",
+      "  Using cached pyee-8.2.2-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: importlib-metadata>=1.4 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyppeteer>=0.0.14->requests-html->yahoo_fin) (4.11.3)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from importlib-metadata>=1.4->pyppeteer>=0.0.14->requests-html->yahoo_fin) (3.7.0)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from bs4->requests-html->yahoo_fin) (4.11.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from beautifulsoup4->bs4->requests-html->yahoo_fin) (2.3.1)\n",
+      "Requirement already satisfied: cssselect>0.7.9 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyquery->requests-html->yahoo_fin) (1.1.0)\n",
+      "Requirement already satisfied: lxml>=2.1 in /Users/etlers/opt/anaconda3/lib/python3.9/site-packages (from pyquery->requests-html->yahoo_fin) (4.8.0)\n",
+      "Building wheels for collected packages: bs4, fake-useragent, parse, sgmllib3k\n",
+      "  Building wheel for bs4 (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for bs4: filename=bs4-0.0.1-py3-none-any.whl size=1272 sha256=563773599365a86e7f2482759c7ef3e54b7a6455f5d73906d02341b3fd41e779\n",
+      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/73/2b/cb/099980278a0c9a3e57ff1a89875ec07bfa0b6fcbebb9a8cad3\n",
+      "  Building wheel for fake-useragent (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for fake-useragent: filename=fake_useragent-0.1.11-py3-none-any.whl size=13502 sha256=caecbd33013118e0fd216cb9bc754264e1d8ae22e6084710f84e47b5e68dfb7d\n",
+      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/ae/e7/76/7dd44644d065268ab0e1b4fa2e802fa4bb0157717b7d6c6d92\n",
+      "  Building wheel for parse (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for parse: filename=parse-1.19.0-py3-none-any.whl size=24591 sha256=eef309a221025a3f340ccf1d6f16b95cbbac7e92611690d9362a5c934a2283c4\n",
+      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/d6/9c/58/ee3ba36897e890f3ad81e9b730791a153fce20caa4a8a474df\n",
+      "  Building wheel for sgmllib3k (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6066 sha256=ac8c9b08870270bb68ba0b5b9f8ba86b5651b322d6bd5e09151c2ec3bfae40cb\n",
+      "  Stored in directory: /Users/etlers/Library/Caches/pip/wheels/65/7a/a7/78c287f64e401255dff4c13fdbc672fed5efbfd21c530114e1\n",
+      "Successfully built bs4 fake-useragent parse sgmllib3k\n",
+      "Installing collected packages: websockets, pyee, sgmllib3k, pyquery, pyppeteer, parse, fake-useragent, bs4, requests-html, feedparser, yahoo-fin\n",
+      "Successfully installed bs4-0.0.1 fake-useragent-0.1.11 feedparser-6.0.10 parse-1.19.0 pyee-8.2.2 pyppeteer-1.0.2 pyquery-1.4.3 requests-html-0.10.0 sgmllib3k-1.0.0 websockets-10.3 yahoo-fin-0.8.9.1\n"
      ]
     }
    ],
    "source": [
-    "!pip3 install yahoo_fin"
+    "!pip install yahoo_fin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "294a586a-a20f-4c2d-9d13-f6d783753873",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# 연속 로그 출력\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minteractiveshell\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InteractiveShell\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -108,56 +88,110 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "import yahoo_fin.stock_info as SI\n",
-    "\n",
+    "import yahoo_fin.stock_info as SI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4aac95f0-0173-4740-8517-e4eacc8e685a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "503"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "sp500_tickers = SI.tickers_sp500()\n",
-    "sp500_tickers"
+    "len(sp500_tickers)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4aac95f0-0173-4740-8517-e4eacc8e685a",
+   "id": "943d7d7c-9363-4a3c-970a-38af6efec014",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/etlers/Library/Python/3.8/lib/python/site-packages (1.4.3)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas) (2022.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Users/etlers/Library/Python/3.8/lib/python/site-packages (from pandas) (1.23.2)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas) (1.15.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install pandas --user"
+    "#get each stock's info\n",
+    "def get_stockinfo(stock_ticker):\n",
+    "    try:\n",
+    "        stock_info = SI.get_quote_table(stock_ticker, dict_result=True)\n",
+    "        #for change '.' -> '-'  , 1. divide key list,val list\n",
+    "        stock_val = list(stock_info.values())\n",
+    "        stock_key = list(stock_info.keys())\n",
+    "        #2.confrim whether there are dot('.') and replace('-')\n",
+    "        for idx,val in enumerate(stock_key) :\n",
+    "            if  \".\" in val:\n",
+    "                stock_key[idx] = val.replace(\".\" , \"-\")\n",
+    "        #3.and put back together\n",
+    "        store_stockInfo = dict()\n",
+    "        store_stockInfo['ticker'] = stock_ticker\n",
+    "        for x, y in zip(stock_key , stock_val):\n",
+    "            store_stockInfo[x] = y #x is key, y is val\n",
+    "        return store_stockInfo\n",
+    "    except Exception as e:\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "943d7d7c-9363-4a3c-970a-38af6efec014",
+   "execution_count": 16,
+   "id": "da69f0a0-228b-4999-954d-d91dff46ab40",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Python 3.8.9\n"
+      "/Users/etlers/opt/anaconda3/lib/python3.9/site-packages/yahoo_fin/stock_info.py:295: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  data = tables[0].append(tables[1])\n",
+      "/Users/etlers/opt/anaconda3/lib/python3.9/site-packages/yahoo_fin/stock_info.py:302: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  data = data.append(quote_price)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'1y Target Est': 183.3,\n",
+       " '52 Week Range': '129.04 - 182.94',\n",
+       " 'Ask': '0.00 x 800',\n",
+       " 'Avg. Volume': 79521727.0,\n",
+       " 'Beta (5Y Monthly)': 1.23,\n",
+       " 'Bid': '0.00 x 900',\n",
+       " \"Day's Range\": '171.66 - 173.71',\n",
+       " 'EPS (TTM)': 6.05,\n",
+       " 'Earnings Date': 'Oct 26, 2022 - Oct 31, 2022',\n",
+       " 'Ex-Dividend Date': 'Aug 05, 2022',\n",
+       " 'Forward Dividend & Yield': '0.92 (0.53%)',\n",
+       " 'Market Cap': '2.781T',\n",
+       " 'Open': 172.78,\n",
+       " 'PE Ratio (TTM)': 28.6,\n",
+       " 'Previous Close': 173.19,\n",
+       " 'Quote Price': 173.02999877929688,\n",
+       " 'Volume': 56377050.0}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!python3 --version"
+    "SI.get_quote_table(\"AAPL\", dict_result=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da69f0a0-228b-4999-954d-d91dff46ab40",
+   "id": "1f3e4606-a247-4d56-acbf-953067b68357",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -179,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
