Yahoo Finance API

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "74f1ef23-d36d-478f-aab9-d386d2fde0ba",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "294a586a-a20f-4c2d-9d13-f6d783753873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4aac95f0-0173-4740-8517-e4eacc8e685a",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +113,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "943d7d7c-9363-4a3c-970a-38af6efec014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "da69f0a0-228b-4999-954d-d91dff46ab40",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f3e4606-a247-4d56-acbf-953067b68357",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
