stock base info

--- a/yahoo_finance.ipynb
+++ b/yahoo_finance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,177 +29,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEQ</th>\n",
+       "      <th>CD</th>\n",
+       "      <th>NM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>Apple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>Microsoft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>Amazon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GOOG</td>\n",
+       "      <td>Alphabet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>Alphabet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>496</td>\n",
+       "      <td>SEE</td>\n",
+       "      <td>Sealed Air</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>497</td>\n",
+       "      <td>HBI</td>\n",
+       "      <td>Hanesbrands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>498</td>\n",
+       "      <td>APA</td>\n",
+       "      <td>Apache</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>499</td>\n",
+       "      <td>COG</td>\n",
+       "      <td>Cabot Oil and Gas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>500</td>\n",
+       "      <td>LEG</td>\n",
+       "      <td>Leggett and Platt</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'zip': '98052-6399',\n",
-       " 'sector': 'Technology',\n",
-       " 'fullTimeEmployees': 221000,\n",
-       " 'longBusinessSummary': 'Microsoft Corporation develops, licenses, and supports software, services, devices, and solutions worldwide. The company operates in three segments: Productivity and Business Processes, Intelligent Cloud, and More Personal Computing. The Productivity and Business Processes segment offers Office, Exchange, SharePoint, Microsoft Teams, Office 365 Security and Compliance, Microsoft Viva, and Skype for Business; Skype, Outlook.com, OneDrive, and LinkedIn; and Dynamics 365, a set of cloud-based and on-premises business solutions for organizations and enterprise divisions. The Intelligent Cloud segment licenses SQL, Windows Servers, Visual Studio, System Center, and related Client Access Licenses; GitHub that provides a collaboration platform and code hosting service for developers; Nuance provides healthcare and enterprise AI solutions; and Azure, a cloud platform. It also offers enterprise support, Microsoft consulting, and nuance professional services to assist customers in developing, deploying, and managing Microsoft server and desktop solutions; and training and certification on Microsoft products. The More Personal Computing segment provides Windows original equipment manufacturer (OEM) licensing and other non-volume licensing of the Windows operating system; Windows Commercial, such as volume licensing of the Windows operating system, Windows cloud services, and other Windows commercial offerings; patent licensing; and Windows Internet of Things. It also offers Surface, PC accessories, PCs, tablets, gaming and entertainment consoles, and other devices; Gaming, including Xbox hardware, and Xbox content and services; video games and third-party video game royalties; and Search, including Bing and Microsoft advertising. The company sells its products through OEMs, distributors, and resellers; and directly through digital marketplaces, online stores, and retail stores. Microsoft Corporation was founded in 1975 and is headquartered in Redmond, Washington.',\n",
-       " 'city': 'Redmond',\n",
-       " 'phone': '425 882 8080',\n",
-       " 'state': 'WA',\n",
-       " 'country': 'United States',\n",
-       " 'companyOfficers': [],\n",
-       " 'website': 'https://www.microsoft.com',\n",
-       " 'maxAge': 1,\n",
-       " 'address1': 'One Microsoft Way',\n",
-       " 'fax': '425 706 7329',\n",
-       " 'industry': 'Software—Infrastructure',\n",
-       " 'ebitdaMargins': 0.49418998,\n",
-       " 'profitMargins': 0.36686,\n",
-       " 'grossMargins': 0.68402,\n",
-       " 'operatingCashflow': 89034997760,\n",
-       " 'revenueGrowth': 0.124,\n",
-       " 'operatingMargins': 0.42055,\n",
-       " 'ebitda': 97982996480,\n",
-       " 'targetLowPrice': 250,\n",
-       " 'recommendationKey': 'buy',\n",
-       " 'grossProfits': 135620000000,\n",
-       " 'freeCashflow': 49479000064,\n",
-       " 'targetMedianPrice': 330,\n",
-       " 'currentPrice': 291.32,\n",
-       " 'earningsGrowth': 0.031,\n",
-       " 'currentRatio': 1.785,\n",
-       " 'returnOnAssets': 0.14919,\n",
-       " 'numberOfAnalystOpinions': 47,\n",
-       " 'targetMeanPrice': 333,\n",
-       " 'debtToEquity': 47.075,\n",
-       " 'returnOnEquity': 0.47151002,\n",
-       " 'targetHighPrice': 411,\n",
-       " 'totalCash': 104748998656,\n",
-       " 'totalDebt': 78399995904,\n",
-       " 'totalRevenue': 198269992960,\n",
-       " 'totalCashPerShare': 14.045,\n",
-       " 'financialCurrency': 'USD',\n",
-       " 'revenuePerShare': 26.45,\n",
-       " 'quickRatio': 1.567,\n",
-       " 'recommendationMean': 1.7,\n",
-       " 'exchange': 'NMS',\n",
-       " 'shortName': 'Microsoft Corporation',\n",
-       " 'longName': 'Microsoft Corporation',\n",
-       " 'exchangeTimezoneName': 'America/New_York',\n",
-       " 'exchangeTimezoneShortName': 'EDT',\n",
-       " 'isEsgPopulated': False,\n",
-       " 'gmtOffSetMilliseconds': '-14400000',\n",
-       " 'quoteType': 'EQUITY',\n",
-       " 'symbol': 'MSFT',\n",
-       " 'messageBoardId': 'finmb_21835',\n",
-       " 'market': 'us_market',\n",
-       " 'annualHoldingsTurnover': None,\n",
-       " 'enterpriseToRevenue': 10.906,\n",
-       " 'beta3Year': None,\n",
-       " 'enterpriseToEbitda': 22.068,\n",
-       " '52WeekChange': 0.0068104267,\n",
-       " 'morningStarRiskRating': None,\n",
-       " 'forwardEps': 11.92,\n",
-       " 'revenueQuarterlyGrowth': None,\n",
-       " 'sharesOutstanding': 7457889792,\n",
-       " 'fundInceptionDate': None,\n",
-       " 'annualReportExpenseRatio': None,\n",
-       " 'totalAssets': None,\n",
-       " 'bookValue': 22.313,\n",
-       " 'sharesShort': 38192351,\n",
-       " 'sharesPercentSharesOut': 0.0050999997,\n",
-       " 'fundFamily': None,\n",
-       " 'lastFiscalYearEnd': 1656547200,\n",
-       " 'heldPercentInstitutions': 0.72105,\n",
-       " 'netIncomeToCommon': 72737996800,\n",
-       " 'trailingEps': 9.65,\n",
-       " 'lastDividendValue': 0.62,\n",
-       " 'SandP52WeekChange': -0.021605492,\n",
-       " 'priceToBook': 13.0560665,\n",
-       " 'heldPercentInsiders': 0.00074,\n",
-       " 'nextFiscalYearEnd': 1719705600,\n",
-       " 'yield': None,\n",
-       " 'mostRecentQuarter': 1656547200,\n",
-       " 'shortRatio': 1.43,\n",
-       " 'sharesShortPreviousMonthDate': 1656547200,\n",
-       " 'floatShares': 7450657717,\n",
-       " 'beta': 0.927206,\n",
-       " 'enterpriseValue': 2162318508032,\n",
-       " 'priceHint': 2,\n",
-       " 'threeYearAverageReturn': None,\n",
-       " 'lastSplitDate': 1045526400,\n",
-       " 'lastSplitFactor': '2:1',\n",
-       " 'legalType': None,\n",
-       " 'lastDividendDate': 1652832000,\n",
-       " 'morningStarOverallRating': None,\n",
-       " 'earningsQuarterlyGrowth': 0.017,\n",
-       " 'priceToSalesTrailing12Months': 10.95795,\n",
-       " 'dateShortInterest': 1659052800,\n",
-       " 'pegRatio': 1.88,\n",
-       " 'ytdReturn': None,\n",
-       " 'forwardPE': 24.439598,\n",
-       " 'lastCapGain': None,\n",
-       " 'shortPercentOfFloat': 0.0050999997,\n",
-       " 'sharesShortPriorMonth': 38896339,\n",
-       " 'impliedSharesOutstanding': 0,\n",
-       " 'category': None,\n",
-       " 'fiveYearAverageReturn': None,\n",
-       " 'previousClose': 292.09,\n",
-       " 'regularMarketOpen': 289.74,\n",
-       " 'twoHundredDayAverage': 294.2482,\n",
-       " 'trailingAnnualDividendYield': 0.008490534,\n",
-       " 'payoutRatio': 0.2508,\n",
-       " 'volume24Hr': None,\n",
-       " 'regularMarketDayHigh': 293.3436,\n",
-       " 'navPrice': None,\n",
-       " 'averageDailyVolume10Day': 20404560,\n",
-       " 'regularMarketPreviousClose': 292.09,\n",
-       " 'fiftyDayAverage': 265.9096,\n",
-       " 'trailingAnnualDividendRate': 2.48,\n",
-       " 'open': 289.74,\n",
-       " 'toCurrency': None,\n",
-       " 'averageVolume10days': 20404560,\n",
-       " 'expireDate': None,\n",
-       " 'algorithm': None,\n",
-       " 'dividendRate': 2.48,\n",
-       " 'exDividendDate': 1660694400,\n",
-       " 'circulatingSupply': None,\n",
-       " 'startDate': None,\n",
-       " 'regularMarketDayLow': 289.47,\n",
-       " 'currency': 'USD',\n",
-       " 'trailingPE': 30.188602,\n",
-       " 'regularMarketVolume': 17763569,\n",
-       " 'lastMarket': None,\n",
-       " 'maxSupply': None,\n",
-       " 'openInterest': None,\n",
-       " 'marketCap': 2172632563712,\n",
-       " 'volumeAllCurrencies': None,\n",
-       " 'strikePrice': None,\n",
-       " 'averageVolume': 27231217,\n",
-       " 'dayLow': 289.47,\n",
-       " 'ask': 290.71,\n",
-       " 'askSize': 800,\n",
-       " 'volume': 17763569,\n",
-       " 'fiftyTwoWeekHigh': 349.67,\n",
-       " 'fromCurrency': None,\n",
-       " 'fiveYearAvgDividendYield': 1.23,\n",
-       " 'fiftyTwoWeekLow': 241.51,\n",
-       " 'bid': 290.52,\n",
-       " 'tradeable': False,\n",
-       " 'dividendYield': 0.0085,\n",
-       " 'bidSize': 800,\n",
-       " 'dayHigh': 293.3436,\n",
-       " 'coinMarketCapLink': None,\n",
-       " 'regularMarketPrice': 291.32,\n",
-       " 'preMarketPrice': 289.51,\n",
-       " 'logo_url': 'https://logo.clearbit.com/microsoft.com',\n",
-       " 'trailingPegRatio': 2.1803}"
+       "     SEQ     CD                 NM\n",
+       "0      1   AAPL              Apple\n",
+       "1      2   MSFT          Microsoft\n",
+       "2      3   AMZN             Amazon\n",
+       "3      4   GOOG           Alphabet\n",
+       "4      5  GOOGL           Alphabet\n",
+       "..   ...    ...                ...\n",
+       "495  496    SEE         Sealed Air\n",
+       "496  497    HBI        Hanesbrands\n",
+       "497  498    APA             Apache\n",
+       "498  499    COG  Cabot Oil and Gas\n",
+       "499  500    LEG  Leggett and Platt\n",
+       "\n",
+       "[500 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stock_list = pd.read_excel(open('us_stock_list.xlsx', 'rb'), sheet_name='Sheet2')\n",
+    "df_stock_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KEY</th>\n",
+       "      <th>VALUE</th>\n",
+       "      <th>REMARKS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fullTimeEmployees</td>\n",
+       "      <td>221000.00000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>maxAge</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ebitdaMargins</td>\n",
+       "      <td>0.49419</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>profitMargins</td>\n",
+       "      <td>0.36686</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grossMargins</td>\n",
+       "      <td>0.68402</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>dividendYield</td>\n",
+       "      <td>0.00850</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>bidSize</td>\n",
+       "      <td>900.00000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>dayHigh</td>\n",
+       "      <td>289.25000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>regularMarketPrice</td>\n",
+       "      <td>286.15000</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>trailingPegRatio</td>\n",
+       "      <td>2.18030</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>98 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   KEY         VALUE REMARKS\n",
+       "0    fullTimeEmployees  221000.00000        \n",
+       "1               maxAge       1.00000        \n",
+       "2        ebitdaMargins       0.49419        \n",
+       "3        profitMargins       0.36686        \n",
+       "4         grossMargins       0.68402        \n",
+       "..                 ...           ...     ...\n",
+       "93       dividendYield       0.00850        \n",
+       "94             bidSize     900.00000        \n",
+       "95             dayHigh     289.25000        \n",
+       "96  regularMarketPrice     286.15000        \n",
+       "97    trailingPegRatio       2.18030        \n",
+       "\n",
+       "[98 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# get stock info\n",
-    "msft.info"
+    "list_stock = []\n",
+    "for key, value in msft.info.items():\n",
+    "    try:\n",
+    "        list_stock.append([key, float(value), \"\"])\n",
+    "    except:\n",
+    "        pass\n",
+    "df_stock = pd.DataFrame(data=list_stock, columns=[\"KEY\", \"VALUE\", \"REMARKS\"])\n",
+    "df_stock\n",
+    "df_stock.to_csv(\"stock_base_info.csv\", encoding=utf-8-sig\""
    ]
   },
   {
@@ -2491,6 +2584,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -3320,7 +3420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3334,7 +3434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
